title and signin content change

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Minifacts - Amazing Facts & Smart Lifehacks</title>
+    <title>Minifacts</title>
     <meta name="description" content="Discover fascinating facts, clever lifehacks, and expert tips to improve your everyday life." />
     <meta name="author" content="Minifacts" />
 
